fixed focustip and added functions to calculate dark mode colors

--- a/colors/app.css
+++ b/colors/app.css
@@ -77,7 +77,7 @@
 	background-color: color-mix(in srgb,var(--primary-color),#0000 90%);
 	height: auto;
 	width: 240px;
-	margin: 10px 28px 0;
+	margin: 10px auto 0;
 }
 .wavelen-label{
 	display:inline-block;
@@ -100,7 +100,7 @@
 	border: 0;
 	cursor: pointer;
 	width: 100px;	
-	left: 29px;
+	left: 30px;
 	background: var(--secondary-color);
 	text-align: center;
 	margin: 5px 10px;
@@ -110,17 +110,17 @@
 	cursor: not-allowed;
 }
 div.list-element.focustip::after{
+	box-sizing: border-box;
 	display: none;
 	content: '';
 	position: absolute;
-	top: 42px;
-	left: -2px;
-	border-radius: 17px;
+	border-radius: 19px;
 	border: 2px solid var(--accent-color);
 	background-color: color-mix(in srgb,var(--primary-color),#0000 90%);
-	height: auto;
-	width: 200px;
+	height: 80px;
+	width: 240px;
 	padding: 2px 20px;
+	margin-top: 10px;
 }
 input.selector {
 	position:absolute;
