--- a/sheets/site-colors.css
+++ b/sheets/site-colors.css
@@ -1,5 +1,5 @@
 :root{
-	--primary-background-color: #fdf9fc;
+	--primary-background-color: #fdf9fc/* #fff9fd*/;
 	--primary-color: #15bac4;
 	--secondary-color: #34b1d6;
 	--accent-color: #44536b;
@@ -14,10 +14,12 @@
 	:root{
 		color-scheme: dark;
 		--color-scheme: dark;
+		--primary-color: #1ce2ee;
+		--secondary-color: #44e0ff;
 		--text-color: white;
 		--opposite-text-color: black;
-		--accent-color: #88a6ce;
-		--primary-background-color: #0d090c;
+		--accent-color: /*#88a6ce*/ #cff7ff;
+		--primary-background-color: #0d090c /*#3c3a3b*/;
 	}
 }
 
